--- a/myfirstJs.html
+++ b/myfirstJs.html
@@ -9,6 +9,7 @@
 <body>
     <h1 id="h1">This is my first javascript file</h1>
     <button onclick="action()">Click Me</button>
+    <h2>New changes</h2>
 
 </body>
 </html>
