Adding a new html file to the commit

--- a/newfile.html
+++ b/newfile.html
@@ -7,16 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="h1">This is my first javascript file</h1>
-    <button onclick="action()">Click Me</button>
-
+    <h1>This is a new file for checking commit</h1>
 </body>
 </html>
-
-<script>
-    function action(){
-    var heading = document.getElementById('h1');
-    heading.innerHTML="Test is changed";
-
-    }
-</script>
