sixth commit changes to myfirstJs.html file

--- a/myfirstJs.html
+++ b/myfirstJs.html
@@ -10,6 +10,7 @@
     <h1 id="h1">This is my first javascript file</h1>
     <button onclick="action()">Click Me</button>
     <h2>New changes</h2>
+    <h3>changes today</h3>
 
 </body>
 </html>
