Changes in myfirstJs.html file

--- a/myfirstJs.html
+++ b/myfirstJs.html
@@ -16,7 +16,7 @@
 </html>
 
 <script>
-    function action(){
+    function action1(){
     var heading = document.getElementById('h1');
     heading.innerHTML="Test is changed";
 
