--- a/myfirstJs.html
+++ b/myfirstJs.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="h1">This is my first javascript file</h1>
-    <button onclick="action()">Click Me</button>
+    <!-- <button onclick="action()">Click Me</button> -->
     <h2>New changes</h2>
     <h3>changes today</h3>
 
